@@ -5,6 +5,10 @@ HISTORY
 1.1rc9 (Unreleased)
 -------------------
 
+- Added ploneinlinestyles plugin so inline styles get filtered based on html
+  filtering settings.
+  [robgietema]
+
 - Changed list style to use classes (merge from xhtml-strict branche).
   [robgietema]
 
